--- a/Main/src/main/res/layout/item_schedule.xml
+++ b/Main/src/main/res/layout/item_schedule.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@android:color/darker_gray">
+              android:background="@drawable/item_selector">
 
     <TextView
         android:id="@+id/text"
