--- a/Main/src/main/res/layout/time_mark_12.xml
+++ b/Main/src/main/res/layout/time_mark_12.xml
@@ -15,16 +15,16 @@
  ~ limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="40dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="00:00"/>
+        android:layout_marginRight="4dp"
+        android:text="01:00 AM"/>
 
     <View
         android:id="@+id/time_line"
