--- a/Main/src/main/res/layout/activity_main.xml
+++ b/Main/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
 
         <Button
             android:id="@+id/test_button"
+            android:visibility="gone"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
