--- a/Main/src/main/res/layout/item_schedule.xml
+++ b/Main/src/main/res/layout/item_schedule.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:gravity="center"
         tools:text="item"/>
 </LinearLayout>
