--- a/Main/src/main/res/values/styles.xml
+++ b/Main/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- the theme applied to the application or activity -->
-    <style name="MyTheme"
+    <style name="AppTheme"
            parent="@style/Theme.AppCompat.Light.DarkActionBar">
     </style>
 </resources>
