--- a/Main/src/main/res/layout/activity_main.xml
+++ b/Main/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="2dp">
 
         <Button
             android:layout_width="0dp"
