--- a/Main/src/main/res/layout/item_schedule.xml
+++ b/Main/src/main/res/layout/item_schedule.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:clickable="true"
               android:background="@drawable/item_selector">
 
     <TextView
