--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
       schedule:itemPaddingRight="8dp"
       schedule:internalPaddingTop="8dp"
       schedule:internalPaddingBottom="8dp"
-      schedule:timeMarksDistance="40dp"
-      schedule:itemSelector="@drawable/item_selector"/>
+      schedule:timeMarksDistance="40dp"/>
 
     <LinearLayout
       android:layout_width="match_parent"
