--- a/demo/src/main/res/layout/item_schedule.xml
+++ b/demo/src/main/res/layout/item_schedule.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acbelter.scheduleview.fglayout.ForegroundLinearLayout
+              xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:clickable="true"
-              android:background="@drawable/item_selector">
+              android:background="@android:color/darker_gray"
+              android:foreground="@drawable/item_selector">
 
     <TextView
       android:id="@+id/text"
@@ -14,4 +16,4 @@
       android:layout_height="match_parent"
       android:gravity="center"
       tools:text="item"/>
-</LinearLayout>
+</com.acbelter.scheduleview.fglayout.ForegroundLinearLayout>
